--- a/buildtest/build.xml
+++ b/buildtest/build.xml
@@ -85,22 +85,9 @@
     <target name="build-annotator" depends="checkout-annotations">
         <ant dir="${annotator}" inheritAll="false" target="bin"/>
     </target>
-    <target name="build-all" depends="build-asmx,
-        build-scene-lib, build-annotations-compiler, 
+    <target name="build-all" depends="build-scene-lib,
+        build-annotations-compiler, 
         build-annotated-jdk, build-annotator, build-javarifier">
-    </target>
-    
-    <!--
-        Targets to actually run the tests.
-    -->
-    <!-- Runs the tests on the extensions to ASM. -->
-    <target name="test-asmx" depends="build-asmx">
-        <ant dir="${asmx}" inheritAll="false" target="test">
-            <property name="test.group" value="conform/xannotation"/>
-        </ant>
-        <copy todir="./reports">
-            <fileset dir="${asmx}/output/test/reports" includes="**/*"/>
-        </copy>
     </target>
     
     <!-- Runs the tests on the annotation scene library, and also
@@ -132,7 +119,7 @@
         </exec>
     </target>
 
-    <target name="test-all-annotations" depends="test-asmx, test-scene-lib, test-annotator"/> 
+    <target name="test-all-annotations" depends="test-scene-lib, test-annotator"/> 
 
     <target name="test-all" depends="test-all-annotations, test-javarifier"/>
     
