Use eisop instead of typetool versions of dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ after_success:
             ($TRAVIS_PULL_REQUEST == false) &&
             ( (! $TRAVIS_JOB_NUMBER == *.*) || ($TRAVIS_JOB_NUMBER == *.1) ) ]] ; then
         curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
-        sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN
+        sh trigger-travis.sh eisop checker-framework $TRAVISTOKEN
       fi
