--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -396,7 +396,7 @@
     </copy>
 
     <symlink overwrite="true"
-             link="${deploy-dir}/index.html"
+             link="index.html"
              resource="${deploy-dir}/annotation-file-utilities.html"/>
   </target>
 
