--- a/global.build.properties
+++ b/global.build.properties
@@ -14,6 +14,7 @@ workspace : ..
 
 annotation-tools : ${workspace}/annotation-tools
 afu : ${annotation-tools}/annotation-file-utilities
+asmx : ${annotation-tools}/asmx
 scene-lib : ${annotation-tools}/scene-lib
 
 # Compiler.  For annotations-compiler builds, use:   antfile="make/build.xml"
