--- a/scene-lib/.classpath
+++ b/scene-lib/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="junit.jar"/>
-	<classpathentry kind="lib" path="/annotation-file-utilities/lib/asm-5.0.jar"/>
-	<classpathentry kind="lib" path="/annotation-file-utilities/lib/plume.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/asmx"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/guava-15.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
