--- a/buildtest/build.xml
+++ b/buildtest/build.xml
@@ -1,11 +1,11 @@
 <project name="buildtest" default="test-all">
 
-    <!-- 
-        Initial target to setup the build directory.
+    <!--
+        Initialization target to setup the build directory.
     -->
     <target name="init">
         <tstamp/>
-        
+
         <property name="builddir" location="build-current-${DSTAMP}" />
         <mkdir dir="${builddir}"/>
 
@@ -18,7 +18,7 @@
         <property name="javarifier" location="${builddir}/javari/javarifier" />
 
     </target>
-    
+
     <!--
         Targets to checkout all the projects.
     -->
@@ -30,7 +30,7 @@
             <arg value="jsr308-langtools"/>
         </exec>
     </target>
-    
+
     <target name="checkout-annotation-tools" depends="init">
         <exec dir="${builddir}" executable="git" failonerror="true">
             <arg value="clone"/>
@@ -38,7 +38,7 @@
             <arg value="annotation-tools"/>
         </exec>
     </target>
-    
+
     <target name="checkout-checker-framework" depends="init">
         <exec dir="${builddir}" executable="git" failonerror="true">
             <arg value="clone"/>
@@ -46,7 +46,7 @@
             <arg value="checker-framework"/>
         </exec>
     </target>
-    
+
     <target name="checkout-javarifier" depends="init">
         <exec dir="${builddir}" executable="git" failonerror="true">
             <arg value="clone"/>
@@ -54,47 +54,47 @@
             <arg value="javarifier"/>
         </exec>
     </target>
-    
+
     <target name="checkout-all" depends="checkout-jsr308-langtools, checkout-annotation-tools, checkout-checker-framework, checkout-javarifier"/>
-    
-    <!-- 
+
+    <!--
         Targets to build all the projects.
     -->
     <target name="build-asmx" depends="checkout-annotations">
         <ant dir="${asmx}" inheritAll="false" target="bin"/>
     </target>
-    
+
     <target name="build-scene-lib" depends="checkout-annotations">
         <ant dir="${scene-lib}" inheritAll="false" target="bin"/>
     </target>
-    
+
     <target name="build-annotations-compiler" depends="checkout-annotations">
         <ant dir="${annotations-compiler}" inheritAll="false" target="build"/>
     </target>
-    
+
     <target name="build-annotations-disassembler" depends="checkout-annotations">
         <ant dir="${annotations-disassembler}" inheritAll="false" target="bin"/>
     </target>
-    
+
     <target name="build-annotated-jdk" depends="checkout-qualifiers">
         <ant dir="${annotated-jdk}" inheritAll="false" target="bin"/>
     </target>
-    
+
     <target name="build-javarifier" depends="checkout-javari">
         <ant dir="${javarifier}" inheritAll="false" target="bin"/>
-        <!--        
-        <ant dir="${javarifier}" inheritAll="false" target="tests-compile"/> 
+        <!--
+        <ant dir="${javarifier}" inheritAll="false" target="tests-compile"/>
         -->
     </target>
-    
+
     <target name="build-annotator" depends="checkout-annotations">
         <ant dir="${annotator}" inheritAll="false" target="bin"/>
     </target>
     <target name="build-all" depends="build-asmx,
-        build-scene-lib, build-annotations-compiler, 
+        build-scene-lib, build-annotations-compiler,
         build-annotated-jdk, build-annotator, build-javarifier">
     </target>
-    
+
     <!--
         Targets to actually run the tests.
     -->
@@ -107,9 +107,9 @@
             <fileset dir="${asmx}/output/test/reports" includes="**/*"/>
         </copy>
     </target>
-    
+
     <!-- Runs the tests on the annotation scene library, and also
-        on the classfile to index file and vice versa part of the 
+        on the classfile to index file and vice versa part of the
         annotation file utilities. -->
     <target name="test-scene-lib" depends="build-scene-lib">
         <ant dir="${scene-lib}" inheritAll="false" target="test-scene-lib"/>
@@ -127,7 +127,7 @@
             <arg value="all"/>
         </exec>
     </target>
-    
+
     <!-- Runs the tests on the javarifier, including the unit tests, jolden
          and the annotation scene library. -->
     <target name="test-javarifier" depends="build-javarifier">
@@ -137,10 +137,10 @@
         </exec>
     </target>
 
-    <target name="test-all-annotations" depends="test-asmx, test-scene-lib, test-annotator"/> 
+    <target name="test-all-annotations" depends="test-asmx, test-scene-lib, test-annotator"/>
 
     <target name="test-all" depends="test-all-annotations, test-javarifier"/>
-    
+
     <target name="help">
         <echo message="Buildfile for the Extended Annotations/Javari project"/>
         <echo message="Targets: "/>
