--- a/scene-lib/build.xml
+++ b/scene-lib/build.xml
@@ -213,7 +213,7 @@
 
     <target name="test-scene-lib" depends="init, bin">
         <mkdir dir="reports"/>
-        <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonfailure="yes">
+        <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonerror="yes" haltonfailure="yes">
             <jvmarg value="-Xbootclasspath/p:${toString:libpath}"/>
             <classpath refid="libpath"/>
             <formatter type="plain"/>
@@ -226,7 +226,7 @@
 
     <target name="test-classfile" depends="init, bin">
         <mkdir dir="reports"/>
-        <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonfailure="yes">
+        <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonerror="yes" haltonfailure="yes">
             <jvmarg value="-Xbootclasspath/p:${toString:libpath}"/>
             <classpath refid="libpath"/>
             <formatter type="plain"/>
