Fix location of index.html symlink created when building the web site

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -396,8 +396,8 @@
     </copy>
 
     <symlink overwrite="true"
-             link="index.html"
-             resource="${deploy-dir}/annotation-file-utilities.html"/>
+             link="${deploy-dir}/index.html"
+             resource="annotation-file-utilities.html"/>
   </target>
 
   <target name="annotation-file-format-clean"
