--- a/annotation-file-utilities/.classpath
+++ b/annotation-file-utilities/.classpath
@@ -7,7 +7,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/scene-lib"/>
 	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-<!--   <classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/> -->
-	<classpathentry kind="lib" path="lib/afuplume.jar"/>
+        <classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
