--- a/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
+++ b/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
@@ -1,14 +1,20 @@
-all: out
+.PHONY: all
+all: bridge no-bridge
 
-out: C.jaif C.class
-	rm -f out
-	insert-annotations-to-source C.jaif C.java |& tee out
-	test ! -s out
+.PHONY: bridge
+bridge: C.class
+	extract-annotations C.class
+	test 3 -eq `grep -c -w '@A' C.jaif`
+
+.PHONY: no-bridge
+no-bridge: C.class
+	extract-annotations -b C.class
+	test 2 -eq `grep -c -w '@A' C.jaif`
 
 C.class: C.java
 	javac -g C.java
 
 .PHONY: clean
 clean:
-	rm -rf *.class annotated out
+	rm -rf *.class C.jaif annotated out
 
