--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ annotation-file-utilities/tests/*.diff
 annotation-file-utilities/tests/*.log
 annotation-file-utilities/tests/*.output
 
+asmx/output
 
 scene-lib/javadoc
 scene-lib/reports
