Use correct version of scripts

--- a/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
+++ b/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
@@ -3,16 +3,16 @@ all: bridge no-bridge
 
 .PHONY: bridge
 bridge: C.class
-	extract-annotations C.class
+	../../../scripts/extract-annotations C.class
 	test 3 -eq `grep -c -w '@A' C.jaif`
 
 .PHONY: no-bridge
 no-bridge: C.class
-	extract-annotations -b C.class
+	../../../scripts/extract-annotations -b C.class
 	test 2 -eq `grep -c -w '@A' C.jaif`
 
 C.class: C.java
-	javac -g C.java
+	$(JAVAC) -g C.java
 
 .PHONY: clean
 clean:
