Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ annotation-file-utilities/tests/source-extension/*.diff
 annotation-file-utilities/tests/source-extension/*.log
 annotation-file-utilities/tests/source-extension/*.output
 annotation-file-utilities/tests/Makefile.user
+annotation-file-utilities/tests/system-test/out1
+annotation-file-utilities/tests/system-test/out3
+annotation-file-utilities/tests/system-test/out4.class
 annotation-file-utilities/tests/system-test/out2.diff
 annotation-file-utilities/tests/system-test/out2.jaif
 annotation-file-utilities/tests/system-test/out5.diff
