--- a/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
+++ b/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
@@ -3,11 +3,16 @@ all: bridge no-bridge
 
 JAVAC?=javac
 
+JAVACVERSION = $(shell $(JAVAC) -version 2>&1)
+
 .PHONY: bridge
 # Counting bridge methods, there should be 3 @A annotations.
 bridge: C.class
 	../../../scripts/extract-annotations C.class
+# skip test if using javac 1.7, which doesn't copy annotations to bridge methods
+ifneq (1.7.,$(findstring 1.7.,$(JAVACVERSION)))
 	test 3 -eq `grep -c -w '@A' C.jaif` || (echo "Didn't find 3 '@A' in C.jaif:" && cat C.jaif && false)
+endif
 
 .PHONY: no-bridge
 # Not counting bridge methods, there should be 2 @A annotations.
