--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -467,7 +467,7 @@
 
   <target name="run-tests" depends="init-properties"
           description="run tests for the annotator">
-    <condition property="xjavac.args" value="-target 7">
+    <condition property="xjavac.args" value="-source 1.7 -target 7">
       <contains string="${java.version}" substring="1.7"/>
     </condition>
     <exec dir="tests/" executable="make" failonerror="true">
