Add debugging output

--- a/annotation-file-utilities/tests/system-test/Makefile
+++ b/annotation-file-utilities/tests/system-test/Makefile
@@ -32,6 +32,7 @@ clean:
 # Step 1: Compile the source with annotations.
 out1:
 	mkdir out1
+	echo "JAVAVERSION = ${JAVAVERSION}"
 	${XJAVAC} -d out1 source-ann/AnnotationTest.java || (\rm -rf out1 && false)
 
 # Step 2: Convert the annotated class file to an annotation file.
