--- a/annotation-file-utilities/tests/system-test/Makefile
+++ b/annotation-file-utilities/tests/system-test/Makefile
@@ -7,9 +7,7 @@
 ANNCAT ?= ../../../scene-lib/anncat
 JAVAVERSION = $(shell $(JAVA) -version 2>&1)
 ifeq (1.7.,$(findstring 1.7.,$(JAVAVERSION)))
-  XJAVAC ?= ../../../../jsr308-langtools/dist/bin/javac -g source 7 -target 7
-else
-  XJAVAC ?= ../../../../jsr308-langtools/dist/bin/javac -g
+  XJAVACTARGET = source 7 -target 7
 endif
 
 #Switch the lines below to deactivate this test
@@ -33,7 +31,7 @@ clean:
 out1:
 	mkdir out1
 	echo "JAVAVERSION = ${JAVAVERSION}"
-	${XJAVAC} -d out1 source-ann/AnnotationTest.java || (\rm -rf out1 && false)
+	${XJAVAC} ${XJAVACTARGET} -d out1 source-ann/AnnotationTest.java || (\rm -rf out1 && false)
 
 # Step 2: Convert the annotated class file to an annotation file.
 # Do we get the right annotations?
@@ -51,7 +49,7 @@ check-out2: out2.diff
 # Step 3: Compile the source without annotations.
 out3:
 	mkdir out3
-	${XJAVAC} -d out3 source-plain/AnnotationTest.java || (\rm -rf out3 && false)
+	${XJAVAC} ${XJAVACTARGET} -d out3 source-plain/AnnotationTest.java || (\rm -rf out3 && false)
 
 # Step 4: Insert annotations into the class file.
 # Can debug with:  javap -v out4.class
