--- a/annotation-file-utilities/figures/Makefile
+++ b/annotation-file-utilities/figures/Makefile
@@ -5,13 +5,10 @@
 
 PNGFILES = corresp.png dataflow.png nocast.png typecast.png
 
-all: ${EPSFILES} ${PDFFILES} ${PNGFILES} png-copy svg-copy
+all: ${EPSFILES} ${PDFFILES} ${PNGFILES} png-copy
 
 png-copy: ${PNGFILES}
 	cp -pf ${PNGFILES} ..
-
-svg-copy:
-	cp -pf *.svg ..
 
 %.png : %.dot
 	dot -Tpng $< > `basename $< .dot`.png
