Copy svg files in the figures directory to the website

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -390,6 +390,7 @@
 
     <copy todir="${deploy-dir}/figures" flatten="true">
       <fileset dir="figures">
+          <include name="*.svg"/>
           <include name="*.png"/>
           <include name="*.gif"/>
       </fileset>
