--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ after_script:
         if [[ ($TRAVIS_BRANCH == master) &&
               ($TRAVIS_PULL_REQUEST == false) ]] ; then
           curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
-          sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN
+          SLUGOWNER=${TRAVIS_REPO_SLUG%/*}
+          sh trigger-travis.sh ${SLUGOWNER} checker-framework $TRAVISTOKEN
         fi
       fi
 
