--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ annotation-file-utilities/javadoc
 annotation-file-utilities/tests/abbreviated/*.diff
 annotation-file-utilities/tests/abbreviated/*.log
 annotation-file-utilities/tests/abbreviated/*.output
+annotation-file-utilities/tests/enum-filed-imports/*.diff
+annotation-file-utilities/tests/enum-filed-imports/*.log
+annotation-file-utilities/tests/enum-filed-imports/*.output
 annotation-file-utilities/tests/ad-hoc/bridge/A.class
 annotation-file-utilities/tests/ad-hoc/bridge/C.class
 annotation-file-utilities/tests/ad-hoc/bridge/C.jaif
