--- a/annotation-file-utilities/tests/enum-filed-imports/Makefile
+++ b/annotation-file-utilities/tests/enum-filed-imports/Makefile
@@ -7,23 +7,27 @@
 
 # Put user-specific changes in your own Makefile.user.
 # Make will silently continue if that file does not exist.
--include Makefile.user
+-include ../Makefile.user
 
 # Override these in Makefile.user if the java and javac commands are not on
 # your execution path.  Example from Makefile.user:
 #   JAVA=${JAVA_HOME}/bin/java
 #   JAVAC=${JAVA_HOME}/bin/javac
-export JAVA?=java -ea
-export JAVAC?=javac
-export XJAVAC?=javac
+JAVA?=java
+JAVAC?=javac
 
 export SHELL=/bin/bash -o pipefail
 
 
+#filter-out reverses order, so use tac to reverse its input first
 DIFFS := $(wildcard *.goal)
 DISABLED := $(shell grep -le "@skip-test" $(DIFFS))
 FILTERED := $(filter-out $(DISABLED),$(DIFFS))
 DIFFS := $(patsubst %.goal, %.diff, $(FILTERED))
+AFU_JARS := ../../lib/plume.jar ../../annotation-file-utilities.jar
+JAIF := C.jaif
+SRC := $(patsubst %.goal, %.java, $(FILTERED))
+OUT := $(patsubst %.goal, %.output, $(FILTERED))
 
 DEBUG :=
 # Use this to enable some debugging.
@@ -32,71 +36,47 @@ DEBUG :=
 default : all
 
 .PHONY: all
-all : $(DIFFS) abbreviated enum-filed-imports ad-hoc system-test source-extension results
-
-.PHONY: abbreviated
-abbreviated:
-	${MAKE} -C abbreviated
-
-.PHONY: enum-filed-imports
-enum-filed-imports:
-	${MAKE} -C enum-filed-imports
-
-.PHONY: ad-hoc
-ad-hoc:
-	${MAKE} -C ad-hoc
-
-.PHONY: source-extension
-source-extension:
-	${MAKE} -C source-extension
-
-.PHONY: system-test
-system-test:
-	${MAKE} -C system-test
+all : $(DIFFS) results
 
 # Display results of all .diff files.
 .PHONY: results
-results: bin/VerifyDiffs.class
+results: ../bin/VerifyDiffs.class
+	@rm -rf output
 	@echo ""
 	@echo "=== RESULTS ==="
 	@echo ""
-	@$(JAVA) -cp bin VerifyDiffs --show_all
+	@$(JAVA) -cp bin:../bin VerifyDiffs --show_all
 
 # Remakes the little java program that checks and compares diffs
-bin/VerifyDiffs.class : VerifyDiffs.java
-	@$(JAVAC) -g -cp ../bincompile -d bin VerifyDiffs.java
+../bin/VerifyDiffs.class : ../VerifyDiffs.java
+	@$(JAVAC) -g -cp ../../bincompile -d ../bin ../VerifyDiffs.java
 
 # Compiles all the test cases (be verbose about this).
-compile :
+.PHONY: compile
+compile : $(SRC)
 	mkdir -p bin
-	$(XJAVAC) -g -cp ../bin -d bin *.java
-
-.PRECIOUS : bin/annotator/tests/%.class
-bin/annotator/tests/%.class: %.java
-	mkdir -p bin
-# Added "-Xlint:-options" to see if it permits Jenkins job to succeed, due to
-# problem "target value 1.8 is obsolete and will be removed in a future release"
-	$(XJAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities.jar -d bin -sourcepath . $*.java
+	$(JAVAC) -g -cp bin:../../bin -d bin -sourcepath . $(SRC)
 
 # Actually runs the annotator to create the annotated java file.
 # We are required to put annotation-file-utilities.jar (and ../bin) on the
 # bootclasspath so that the JSR 308 javac classes bundled therein are found
 # before the stock javac classes that the Mac OS includes on the bootclasspath
 # (other platforms do not make such inclusions)
-.PRECIOUS: %.output
-%.output: %.jaif %.java bin/annotator/tests/%.class ../lib/plume-core.jar ../bin ../annotation-file-utilities.jar
+output: compile $(JAIF) ../../bin $(AFU_JARS)
 	$(JAVA) \
-        -Xbootclasspath/p:../bin:../annotation-file-utilities.jar \
-        -cp bin \
+        -Xbootclasspath/p:../../bin:../../annotation-file-utilities.jar \
+	-cp bin \
 	annotator.Main \
 	${DEBUG} \
-	--abbreviate=false \
-	-d $*-output \
-	$*.jaif \
-	$*.java \
-	2>&1 | tee $*.log
-	find "$*-output" -name '*.java' -print | xargs cat > "$*.output"
-	rm -rf $*-output
+	--abbreviate=true \
+	-d output \
+	$(JAIF) \
+	$(SRC) \
+	2>&1 | tee C.log
+
+.PRECIOUS: %.output
+%.output: output
+	find output -name "$*.java" -print | xargs cat > "$*.output"
 
 # Compare the output of the annotator and the goal file.
 %.diff: %.goal %.output
@@ -109,6 +89,3 @@ clean :
 	rm -f *.diff
 	rm -f *.log
 	rm -f *.output
-	(cd abbreviated && make clean)
-	(cd enum-filed-imports && make clean)
-	(cd ad-hoc && make clean)
